--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-Django==1.10
-pandas==0.17.1
-BeautifulSoup4
-fake-useragent==0.1.2
-lxml
-gunicorn==19.4.1
+appdirs==1.4.2
+BeautifulSoup==3.2.1
+beautifulsoup4==4.5.3
 dj-database-url==0.3.0
 dj-static==0.0.6
+Django==1.10
 django-filter==0.10.0
+fake-useragent==0.1.2
+gunicorn==19.4.1
+lxml
+numpy==1.12.0
+packaging==16.8
+pandas==0.17.1
+pyparsing==2.1.10
+python-dateutil==2.6.0
+pytz==2016.10
+six==1.10.0
+static3==0.7.0
+whitenoise==3.2
+bleach==1.4.3
